--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,28 @@
 .App {
-  /* text-align: center; */
+  background-color: grey;
+  height: 100vh;
 }
 
 .App-header {
   background-color: #282c34;
   display: flex;
-  /* flex-direction: row; */
-  /* align-items: center; */
-  /* justify-content: flex-start; */
+
   justify-content: space-between;    
 
   color: white;
 }
 
-/* .nav{
-  display: flex;
-  justify-content: space-between;    
+.logo-div {
+  color: white;
+  cursor: pointer;
 }
 
-.nav-items {
-  list-style: none;
-  display: flex;
-  gap: 10px;
-} */
-
-
-.centerText {
-  color: white;
+.logo-div:hover {
+  color: wheat;
 }
 
 .nav-items-wrapper{
   display: flex;
-  /* justify-content: flex-end; */
   align-items: center;
   width: 40%;
 }
@@ -42,10 +33,22 @@
   color: gray;
   margin: 10px;
   justify-content: flex-end;
+  cursor: pointer;
+}
+
+.nav-items:hover{
+  color: wheat;
 }
 
 .wrapper-landing-text{
   width: 50%;
 }
 
-/* min-height: 100vh; */
+#footer{
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:30px;
+  background: darkgray;
+  text-align: center;
+}
