--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
-  /* background-color: grey; */
   height: 100vh;
+  background-color: black;
 }
 
 .header-nav {
@@ -10,9 +10,7 @@
 .nav {
   background-color: #282c34;
   display: flex;
-
   justify-content: space-between;    
-
   color: white;
   box-shadow: 0px 5px 5px wheat;
 }
@@ -54,12 +52,15 @@
   float: left;
   width: 50%;
   height: 70vh;
-  background-color: blueviolet;
 }
 
 .landing-text{
+  color: wheat;
   font-size:30px;
-  
+}
+
+.landing-text p{
+  color: white;
 }
 
 .wrapper-landing-content {
@@ -77,14 +78,25 @@ justify-content: center;
 }
 
 .Container {
-  /* background-color: pink; */
+  background-color: pink;
+  /* width: 250px; */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  size: inherit;
+}
+
+li {
+  background: linear-gradient(90deg,#d1aad7,#c88bc4 25.17%,#7b8fdd 50%,#86bff2 73.09%,#bbdef2);
+  -webkit-background-clip: text;
+  /* -webkit-text-fill-color: transparent; */
 }
 
 #footer{
-  position:fixed;
+  position:absolute;
   bottom:0;
   width:100%;
   height:30px;
   background: darkgray;
   text-align: center;
+  margin-top: auto;
 }
