--- a/src/MovieHolder.css
+++ b/src/MovieHolder.css
@@ -1,6 +1,6 @@
 
 .movieHolder {
-    /* display: flex; */
+    padding:2em;
     height: 50vh;
     background: radial-gradient(circle at center top, rgb(10, 28, 58) 0px, rgb(5, 17, 34) 900px, rgb(5, 17, 34));
     color: white;
@@ -8,15 +8,17 @@
 
 .visuals {
     display: flex;
+    flex-direction: column;
     float: left;
+    margin-right: 2em;
 }
 
 .visuals > p {
-    text-align: center;
+    text-align:left;
+    background-color: blue;
 }
 
 .movie-details {
     display: flex;
-    /* float: right; */
 
 }
