--- a/src/MovieHolder.css
+++ b/src/MovieHolder.css
@@ -13,6 +13,11 @@
     margin-right: 2em;
 }
 
+.visuals > img {
+    max-width: 400px;
+    max-height: 300px;
+}
+
 .visuals > p {
     text-align:left;
     background-color: blue;
